# fastapi-boilerplate

./: .env  .env.example  .gitignore  CLAUDE.md  Dockerfile.dev  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/skills/fastapi-endpoint/: SKILL.md
.claude/skills/fastapi-migration/: SKILL.md
.claude/skills/fastapi-model/: SKILL.md
.claude/skills/fastapi-permission/: SKILL.md
.claude/skills/fastapi-test/: SKILL.md
.claude/skills/feature-from-plan/: SKILL.md
alembic/: env.py
alembic/versions/: 2026_02_06_1917-c756768ae27e_add_refresh_token_blacklist_table.py
app/: __init__.py  config.py  main.py
app/api/: __init__.py  deps.py  handlers.py
app/api/v1/: __init__.py  auth.py  chat.py  items.py  router.py  users.py
app/cli/: __init__.py  blacklist.py
app/common/: __init__.py  alerts.py  exceptions.py  logging.py  permissions.py  security.py
app/core/: alerts.py  permissions.py  security.py
app/db/: __init__.py  mongodb.py  postgres.py  unit_of_work.py
app/models/: __init__.py
app/models/mongodb/: __init__.py  document.py
app/models/postgres/: __init__.py  item.py  refresh_token_blacklist.py  user.py
app/repositories/: __init__.py  base.py  item_repo.py  refresh_token_blacklist_repository.py  user_repo.py
app/schemas/: __init__.py  auth.py  chat.py  item.py  user.py
app/services/: __init__.py  auth_service.py  item_service.py  user_service.py
docs/: CLAUDE_PROJECT_SETUP.md  EXAMPLE_USAGE.md  FEATURE_WORKFLOW.md  TESTING.md
docs/prompts/: backend-patterns.md  custom-instructions.md
fastapi_boilerplate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: __init__.py  cli.py  init_db.py  init_mongo.js  init_postgres.sql
tests/: conftest.py
tests/integration/: test_auth.py
tests/unit/: test_security.py
